Fix CSS bug adding horizontal scroll bar (#19)

--- a/src/sections/Hero/style.module.scss
+++ b/src/sections/Hero/style.module.scss
@@ -37,7 +37,7 @@
     flex-direction: column;
     position: absolute;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     margin-top: 14vw;
     padding: 0 2rem;
     z-index: 2;
